# triangle_test

./: CMakeLists.txt  triangle-opengles.c  triangle.c
.github/workflows/: linux.yml  windows.yml
docs/: Triangle Test 调测指导书_V1.0.0.docx  回复 triangle 测试工具确认【请阅】PANGU A0 overall performance相关问题确认.msg  回复 关于Pangu Triangle Performance Test的讨论会--会议纪要与AIs.msg
